force-app/main/default/objects/CRMC_PP__Recent_View__c/CRMC_PP__Recent_View__c.object-meta.xml
<CustomObject>
    <label>Conga Grid Recent View</label>
    <nameField>
        <label>Conga Grid Recent View</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Grid Recent Views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>