force-app/main/default/objects/CRMC_PP__Recent_View__c/fields/CRMC_PP__Conga_Grid_View__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Conga_Grid_View__c</fullName>
    <label>Conga Grid View</label>
    <referenceTo>CRMC_PP__GridView__c</referenceTo>
    <relationshipLabel>Conga Grid Recent Views</relationshipLabel>
    <relationshipName>Conga_Grid_Recent_Views</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>