force-app/main/default/objects/CRMC_PP__Recent_View__c/fields/CRMC_PP__User__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conga_Grid_Recent_Views</relationshipName>
    <type>Lookup</type>
</CustomField>